fix error cant display images when deploy on heroku

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,30 +18,30 @@
     <table class="fadeInRight">
         <tbody>
             <tr>
-                <td><img class="animated" id="img1" src="https://media.giphy.com/media/3oz8xwKBsHNlZ6UvMA/giphy.gif">
+                <td><img class="animated" id="img1" src="images/hinh1.gif">
                 </td>
-                <td><img class="animated" id="img2" src="http://gifimage.net/wp-content/uploads/2017/10/cute-dancing-gif-5.gif"></td>
-                <td><img class="animated" id="img3" src="http://78.media.tumblr.com/17eaa64a6848369e1eea26bb08fe8d4c/tumblr_mfzeeyMiJD1rgpyeqo1_500.gif"></td>
-                <td><img class="animated" id="img4" src="https://media.giphy.com/media/93USr2t7azxvi/source.gif"></td>
-                <td><img class="animated" id="img5" src="https://im-01.gifer.com/3Jn.gif"></td>
-                <td><img class="animated" id="img6" src="https://media.giphy.com/media/3oz8xwKBsHNlZ6UvMA/giphy.gif"></td>
+                <td><img class="animated" id="img2" src="images/hinh2.gif"></td>
+                <td><img class="animated" id="img3" src="images/hinh3.gif"></td>
+                <td><img class="animated" id="img4" src="images/hinh4.gif"></td>
+                <td><img class="animated" id="img5" src="images/hinh5.gif"></td>
+                <td><img class="animated" id="img6" src="images/hinh6.gif"></td>
             </tr>
             <tr>
-                <td><img class="animated" id="img7" src="https://data.whicdn.com/images/34548121/original.gif"></td>
-                <td><img class="animated" id="img8" src="https://media.giphy.com/media/3o6ZtdXxuQ1WKPING0/giphy.gif"></td>
+                <td><img class="animated" id="img7" src="images/hinh7.gif"></td>
+                <td><img class="animated" id="img8" src="images/hinh8.gif"></td>
                 <td colspan="2">
                     <iframe class="animated zoomInDown" width="100%" src="http://www.youtube.com/embed/nHK0u40Ompc?autoplay=1" frameborder="0" allowfullscreen></iframe>
                 </td>
-                <td><img class="animated" id="img9" src="https://media.giphy.com/media/3o6ZtdXxuQ1WKPING0/giphy.gif"></td>
-                <td><img class="animated" id="img10" src="http://78.media.tumblr.com/a9a1355284b1c59aeba14802cd52d8c7/tumblr_nwkihl2Xv01rrcri6o1_500.gif"></td>
+                <td><img class="animated" id="img9" src="images/hinh9.gif"></td>
+                <td><img class="animated" id="img10" src="images/hinh10.gif"></td>
             </tr>
             <tr>
-                <td><img class="animated" id="img11" src="https://media.giphy.com/media/bjE9JbNSckM0w/giphy.gif"></td>
-                <td><img class="animated" id="img12" src="https://cdn53.picsart.com/181085309000202.gif?r240x240"></td>
-                <td><img class="animated" id="img13" src="https://media.giphy.com/media/l0ExhgDYmserkFabm/giphy.gif"></td>
-                <td><img class="animated" id="img14" src="http://media2.giphy.com/media/qUih9XjqVc0o0/giphy.gif"></td>
-                <td><img class="animated" id="img15" src="http://gifimage.net/wp-content/uploads/2017/10/cute-dancing-gif-11.gif"></td>
-                <td><img class="animated" id="img16" src="https://i.pinimg.com/originals/66/70/fd/6670fd61b91760bf8f04ca0479a2e0d1.gif" class="fadeInRight"></td>
+                <td><img class="animated" id="img11" src="images/hinh11.gif"></td>
+                <td><img class="animated" id="img12" src="images/hinh12.gif"></td>
+                <td><img class="animated" id="img13" src="images/hinh13.gif"></td>
+                <td><img class="animated" id="img14" src="images/hinh14.gif"></td>
+                <td><img class="animated" id="img15" src="images/hinh15.gif"></td>
+                <td><img class="animated" id="img16" src="images/hinh16.gif" class="fadeInRight"></td>
             </tr>
         </tbody>
     </table>
