fix error http links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="SHORTCUT ICON" href="http://icons.veryicon.com/png/System/Small%20%26%20Flat/heart.png" />
+    <link rel="SHORTCUT ICON" href=images/heart.png" />
     <title>Happy Woman Day 8/3</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
@@ -30,7 +30,7 @@
                 <td><img class="animated" id="img7" src="images/hinh7.gif"></td>
                 <td><img class="animated" id="img8" src="images/hinh8.gif"></td>
                 <td colspan="2">
-                    <iframe class="animated zoomInDown" width="100%" src="http://www.youtube.com/embed/nHK0u40Ompc?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="animated zoomInDown" width="100%" src="https://www.youtube.com/embed/nHK0u40Ompc?autoplay=1" frameborder="0" allowfullscreen></iframe>
                 </td>
                 <td><img class="animated" id="img9" src="images/hinh9.gif"></td>
                 <td><img class="animated" id="img10" src="images/hinh10.gif"></td>
@@ -47,8 +47,8 @@
     </table>
     <div class="bg_heart"></div>
     Make by DMT with love
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js'></script>
+    <script src='javascripts/jquery.min.js'></script>
+    <script src='javascripts/typed.min.js'></script>
     <script src="javascripts/index.js"></script>
     <img src="images/3.png" style="visibility: visible; width: 20vh; height: 20vh">
 </body>
