fix image link error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,11 +28,11 @@
             </tr>
             <tr>
                 <td><img class="animated" id="img7" src="images/hinh7.gif"></td>
-                <td><img class="animated" id="img8" src="images/hinh8.gif"></td>
+                <td><img class="animated" id="img8" src="images/hinh8.webp"></td>
                 <td colspan="2">
                     <iframe class="animated zoomInDown" width="100%" src="https://www.youtube.com/embed/nHK0u40Ompc?autoplay=1" frameborder="0" allowfullscreen></iframe>
                 </td>
-                <td><img class="animated" id="img9" src="images/hinh9.gif"></td>
+                <td><img class="animated" id="img9" src="images/hinh8.webp"></td>
                 <td><img class="animated" id="img10" src="images/hinh10.gif"></td>
             </tr>
             <tr>
